# MSc_FOFB-mBox

./: .gitignore  .gitlab-ci.yml  .kateproject  CMakeLists.txt  Makefile  README.md  TODO  doxygen.conf  mBox.cc  mBox.sh  mBox_RO.cc  mBox_dummy.cc  test.cc  test_arma.cc  test_send.cc
cmake/: config.h.cmake
cmake/modules/: FindLibRT.cmake  FindRfm2g.cmake  FindZeroMQ.cmake
doc/: README.md
docs/: IOC_RFM_Timing.txt  gofbz2c_rfm2_performancetest_with_DMA.txt  time_measurement_mBox_IOCS8.txt  time_measurement_mBox_complete.txt  timemeasurement.txt
experimentScripts/: onecorr.py  sinesweep.py  untitled2.py
pythonScripts/: sinesweep.py  test0.py
python_tools/: load_data.py  save_data.py  tenHz.py  zmq_client.py  zmq_subs.py
rfm2g/include/: rfm2g_defs_linux.h  rfm2g_ioctl.h  rfm2g_osspec.h  rfm2g_types.h
rfm2g/lib/: Makefile  Makefile_PPC  close.c  config.c  event.c  open.c  rfm2g_errno.c  transfer.c  util.c
src/: CMakeLists.txt  adc.cpp  adc.h  config.h  correctionhandler.cpp  correctionhandler.h  dac.cpp  dac.h  define.h  dma.cpp  dma.h  error.cpp  error.h  logger.cpp  logger.h  main.cpp  mbox.cpp  mbox.h  rfm_helper.cpp  rfm_helper.h  rfmdriver.h  rfmdriver_dummy.cpp  rfmdriver_dummy.h  rfmdriverinterface.h  timingmodule.cpp  timingmodule.h  zhelpers.hpp  zmqext.h
src/handlers/: handler.cpp  handler.h  structures.h
src/handlers/correction/: correctionhandler.cpp  correctionhandler.h  correctionprocessor.cpp  correctionprocessor.h  dynamic10hzcorrectionprocessor.cpp  dynamic10hzcorrectionprocessor.h
src/handlers/measures/: measurehandler.cpp  measurehandler.h
src/logger/: logger.cpp  logger.h  map.cpp  map.h  messenger.cpp  messenger.h  zhelpers.hpp  zmq.hpp  zmqext.cpp  zmqext.h
src/modules/: timers.cpp  timers.h
src/modules/zmq/: extendedmap.cpp  extendedmap.h  logger.cpp  logger.h  map.cpp  messenger.cpp  messenger.h  zmqext.cpp  zmqext.h
src/rfm2g_dummy/: rfm2g_kinc.h  rfm2g_struct.h  rfm2g_version.h
tmp_scripts/: .tenHz.py.swp  cbox.py  dummy_simul.py  for_monday.py  plotMeasures.py  save_data.py  savedata.py  tenHz.py  zmq_client.py  zmq_pub.py  zmq_req.py  zmq_subs.py
